# libchronoid

./: .clang-tidy  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  meson.build  meson.options
.github/workflows/: ci-main.yml  ci-pr.yml  lint-main.yml  lint-pr.yml
chronoid/: base62.c  base62.h  base62_neon.c  base62_simd.h  base62_sse2.c  byteorder.h  chacha20.c  chacha20.h  chronoid.h  chronoid_version.h.in  compare_neon.c  compare_scalar.c  compare_simd.h  compare_sse2.c  encode_avx2.c  encode_batch.c  encode_batch.h  ksuid.c  ksuid.h  meson.build  rand.h  rand_os.c  rand_tls.c  sequence.c  uuidv7.h  wipe.h
chronoid/ksuid/: base62.c  base62.h  base62_neon.c  base62_simd.h  base62_sse2.c  compare_neon.c  compare_scalar.c  compare_simd.h  compare_sse2.c  divisor_magic.h  encode_avx2.c  encode_batch.c  encode_batch.h  ksuid.c  sequence.c
chronoid/uuidv7/: hex.c  hex.h  hex_avx2.c  hex_batch.c  hex_batch.h  hex_simd.h  hex_ssse3.c  uuidv7.c  uuidv7_sequence.c
examples/: chronoid-gen.c
include/: ksuid.h
src/: base62.c  base62.h  chacha20.c  ksuid.c  rand.h  rand_os.c  rand_tls.c  sequence.c
tests/: meson.build  test_base62.c  test_chacha20.c  test_cli.sh  test_compare_parity.c  test_divisor_magic.c  test_init_shared.c  test_new.c  test_parse_format.c  test_parts.c  test_rand_os.c  test_rand_tls.c  test_sequence.c  test_simd_parity.c  test_smoke.c  test_sort.c  test_string_batch.c  test_util.h  test_uuidv7_new.c  test_uuidv7_parse_format.c  test_uuidv7_parts.c  test_uuidv7_rfc_layout.c  test_uuidv7_sequence.c  test_uuidv7_smoke.c  test_uuidv7_string_batch.c  test_wipe.c
tools/: derive-magic.py
