option('tests', type : 'boolean', value : true,
       description : 'Build the unit test suite')
option('cli', type : 'boolean', value : true,
       description : 'Build the ksuid-gen CLI tool')
option('simd', type : 'combo', choices : ['auto', 'none'], value : 'auto',
       description : 'Enable SIMD/NEON acceleration (auto-detected per host arch)')
