option('tests', type : 'boolean', value : true,
       description : 'Build the unit test suite')
option('cli', type : 'boolean', value : true,
       description : 'Build the chronoid-gen CLI tool')
option('simd', type : 'combo', choices : ['auto', 'none'], value : 'auto',
       description : 'Enable SIMD/NEON acceleration (auto-detected per host arch)')
option('avx2_batch', type : 'feature', value : 'auto',
       description : 'Build the AVX2 8-wide ksuid_string_batch kernel (x86_64 only). Selected at runtime via CPUID; non-AVX2 hosts unaffected.')
option('ssse3', type : 'feature', value : 'auto',
       description : 'Build the SSSE3 hex-encode kernel for chronoid_uuidv7_format (x86_64 only). Compile-time gated; non-SSSE3 hosts use the scalar fallback in chronoid/uuidv7/hex.c. On non-x86_64 hosts the option is a no-op.')
